# mcp-http-inspector

./: .gitignore  README.md  db.py  pyproject.toml  server.py
skills/: SKILL.md
web/: index.html
